<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:label="@string/topic_selection"
    android:layout_height="match_parent"
    tools:context="ca.uwaterloo.cs349.a4.TopicSelection">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="63dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblWelcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCurrentUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/curr_user"
        app:layout_constraintEnd_toStartOf="@+id/btnLogoutSel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lblWelcome"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogoutSel"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnLogoutSel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTopicQ"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/lblTopicQ"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.ActionMode.Subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWelcome" />

    <TextView
        android:id="@+id/lblNumQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/lblNumQ"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.ActionMode.Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblTopicQ"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblWorldFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblWorldFlag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTopicQ" />

    <Spinner
        android:id="@+id/spnNumQs"
        android:layout_width="77dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnLoadQ"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@+id/lblWorldFlag"
        app:layout_constraintTop_toBottomOf="@+id/lblNumQ" />

    <Button
        android:id="@+id/btnLoadQ"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/btnLoadQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogoutSel" />

</android.support.constraint.ConstraintLayout>
